<resources>
    <string name="app_name">nellstargram</string>
    <string name="facebook_app_id">873009302900995</string>
    <string name="fb_login_protocol_scheme">fb873009302900995</string>

    <!-- Sign In -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin_email">Signup or Signin by email</string>
    <string name="signin_google">Google login</string>
    <string name="signin_facebook">Facebook login</string>
    <string name="signin_twitter">Twitter login</string>
    <string name="signup_complete">Membership success</string>
    <string name="signin_complete">Login success</string>
    <string name="signout">로그아웃</string>
    <string name="signout_success">로그아웃 성공</string>
    <string name="signout_fail">로그아웃 실패</string>
    <string name="signout_fail_null">Please enter your email and password</string>

    <!-- Bottom Navigation View -->
    <string name="home">home</string>
    <string name="search">Search</string>
    <string name="gallery">Gallery</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>

    <!-- Account -->
    <string name="post">Post</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="follow">Follow</string>
    <string name="follow_click">팔로우하기</string>
    <string name="follow_cancel">언팔로우</string>
    <string name="profile">Profile</string>
    <string name="count_0">0</string>

    <!-- Alarm -->
    <string name="alarm_favorite">님이 내 게시글을 마음에 들어합니다.</string>
    <string name="alarm_comment">님이 내 게시글에 리플을 달았습니다.</string>
    <string name="alarm_follow">님이 나를 팔로우 합니다.</string>

    <!-- Comment -->
    <string name="send">Send</string>

    <!-- Add Photo -->
    <string name="upload_image">Photo Upload</string>
    <string name="upload_img">올리기</string>
    <string name="hint_image_content">Write caption</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_fail">Upload fail</string>

    <!-- Toolbar -->
    <string name="back">Back</string>

    <!-- etc -->
    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <!-- User -->
    <string name="user_name">사용자 이름</string>

    <!--- -->
    <string name="twitter_consumer_key">"Yd8W9VqoH9a0Tzlb1WfaqZT9Y"</string>
    <string name="twitter_consumer_secret">"AxqRcXbCCoXiiO8uzxAJaSLgFzlYT8eknFaVzdkCDyDfJ6XLDF"</string>
</resources>