<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_above="@+id/signin_layer"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_title"/>

    <LinearLayout
        android:id="@+id/signin_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp">
            <EditText
                android:id="@+id/email_edittext"
                android:inputType="textUri"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <EditText
                android:id="@+id/password_edittext"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/email_login_btn"
            android:text="@string/signin_email"
            android:layout_width="match_parent"
            android:theme="@style/Widget.AppCompat.Button"
            android:layout_height="40dp"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/google_login_btn"
            android:text="@string/signin_google"
            android:textColor="@color/white"
            android:background="@drawable/btn_signin_google"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/twitter_login_btn"
            android:text="@string/signin_twitter"
            android:textColor="@color/white"
            android:background="@drawable/btn_signin_twitter"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="80dp"/>

    </LinearLayout>

</RelativeLayout>